Browser_IDE/stylesheet.css
/*
  Josh's Custom CSS Reset
  https://www.joshwcomeau.com/css/custom-css-reset/
*/
*, *::before, *::after {
  box-sizing: border-box;
}
* {
  margin: 0;
}
body {
  line-height: 1.5;
  -webkit-font-smoothing: antialiased;
}
img, picture, video, canvas, svg {
  display: block;
  max-width: 100%;
}
input, button, textarea, select {
  font: inherit;
}
p, h1, h2, h3, h4, h5, h6 {
  overflow-wrap: break-word;
}

#root, #__next {
  isolation: isolate;
}


iframe {
    border: 0;
}

h3 {
    font-weight:400;
}


/* SplashKit Online */
button {
    margin: 0px 3px;
    border-radius: 3px;
    border: 0;
    background-color: transparent;
    color: inherit;
    cursor: pointer;
    transition: background-color 0.1s; 
    line-height: 1em;
}
button:disabled {
    color: #AAA;
}

button:hover {
    background-color: #404040;
}

select {
    -webkit-appearance: button;
    -moz-appearance: button;

    margin: 0px 3px;
    border-radius: 3px;
    border: 0px black solid;
    background-color: transparent;
    color: inherit;
    cursor: pointer;
    outline:none;
    line-height: 1em;
}

select:disabled {
    color: #AAA;
}

select:hover {
    background-color: #303030;
}

input {
    margin: 0px 3px;
    border-radius: 3px;
    border: 0;
    background-color: transparent;
    color: inherit;
    outline:none;
    line-height: 1em;
}

a:visited {
    color: #0A0;
}

.sk-body {
    position: relative;
    box-sizing: border-box;
    width: 100%;
    height: 100vh;
    margin: 0;
    padding: 0px;
    color: white;
    background-color: #1f1f1f;

    display:flex;
    flex-direction: column;

    font-family: system-ui,-apple-system,"Segoe UI",Roboto,"Helvetica Neue","Noto Sans","Liberation Sans",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
}

.sk-header {
    background-color: #1f1f1f;
    box-shadow: 0 1px 0 0.4px #404040 inset;
    color: white;
    display: flex;
    list-style: none;
    margin: 0px;
    padding: 0px 10px 0px 0px;
    justify-content: space-between;
    height: 2em;
    line-height: 2em;
}

.sk-header-indent {
    padding-left: 1em;
}

.sk-menu {
    background-color: #1f1f1f;
    color: white;
    display: flex;
    list-style: none;
    padding: 0;
    justify-content: space-between;
    border-top: 1px #404040 solid;
    min-width: 0;
}

.sk-menu li {
    display:flex;
    min-width: 0;
}

.sk-menu li *{
    overflow: hidden;
    text-overflow: ellipsis;
    min-width: 0;
}

.sk-tabs {
    background-color: #1f1f1f;
    display: flex;
    list-style: none;
    padding: 0;
    justify-content: space-between;
    color:#AAA;
    min-width: 0;
}
.sk-tabs li:hover {
    background-color: #222328;
}
.sk-tabs li {
    display:flex;
    padding: 0px 20px;
    border-top: 1px #404040 solid;
    border-right: 1px #404040 solid;
    cursor: pointer;
    transition: all 0.2s;
    min-width: 0;
}
.sk-tabs li .sk-tab-label {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space:nowrap;
}

.sk-tabs-active {
    background-color: #24262d;
    box-shadow: none;
    z-index: 5;
    border-top: #3AF 1px solid !important;
    color: white;
}
.sk-tab-hidden {
    display: none;
}

.sk-tabs li[data-tab]::after {
    content: "\25BC";
    margin-left: 5px;
    visibility: hidden;  
    display: inline-block;   
}

.sk-tabs li[data-tab]:hover::after {
    visibility: visible;
}

.sk-contents {
    background-color: #1f1f1f;
    box-shadow: 0 0 0 1px #404040;
    /*border: 1px #404040 solid;*/

    display:flex;
    flex-direction: column;
    flex-grow:1;
    color: white;
    min-height: 0;
}
.sk-contents-darker {
    background-color: #1B1B1B;
}
.sk-contents-focusable:focus-within {
    box-shadow: 0 0 0 1px #19F;
    z-index:10;
}
textarea {
    outline: none;
}

.sk-main-columns {
    overflow: hidden;
    display: flex;
    flex-direction: row;
    flex-grow: 1;
}

.sk-column {
    display: flex;
    flex-direction: column;
    flex-grow: 1;
}

.gutter {
    display: flex;
    flex-direction: row;
    cursor: e-resize;
    z-index:100;
}

.gutter-vertical {
  cursor: ns-resize;
}

.gutter-horizontal {
  cursor: e-resize;
}

.sk-notification-area {
    position: absolute;
    right: 3em;
    left: 3em;
    bottom: 3em;
    z-index: 10;
    pointer-events: none;
}

.sk-notification-body {
    margin: 0px 5em 0px 1.5em;
    flex-grow: 1;
}

.sk-notification {
    box-shadow: rgba(0,0,0,0.7) 4px 4px 10px 0px;
    padding: 1em;
    display: flex;
    flex-direction: row;
    width: 30em;
    max-width: 100%;
    margin-top: 1em;
    transition: opacity 0.4s;
    opacity: 1;
    margin-left: auto;
    pointer-events: all;
}

.sk-terminal {
    overflow-y: scroll;
    flex-basis: 0;
    border:0;
    padding-left:1em;
    resize: none;
    font-family: monospace, serif;
    white-space: pre-wrap;
    background-color: #161616;
}

.sk-code-view-message {
    position:absolute;
    padding: 3em;
    transition: all 0.5s ease;
    opacity: 0;
    width:100%;
    height:100%;
    overflow: hidden;
}

.sk-terminal > :nth-child(2) {
    margin-top: auto !important;
}

.sk-terminal-input-wrapper {
    padding: 0 1em;
    overflow: hidden;
    box-shadow: 4px 4px 10px rgba(0,0,0,0.3) inset;
    display: flex;
    font-family: monospace, serif;
    white-space: pre-wrap;
}
.sk-terminal-input-wrapper input {
    flex-grow: 1;
    margin: 0;
    padding: 0;
}

.node{
    color:#f8f8f2;
    cursor: pointer;
}
.node-label:hover{
    background-color:#242732;
    cursor: pointer;
}
.node-label{
    width:100%;
    display:flex;
    flex-direction: row !important;
    padding: 0px 20px 0px 0px;
}
.node-label-text{
    flex: 1;
    padding: 0px 0px 0px 3px;
}
.node-button{
    background: none;
    border: none;
    color: white;
    padding: 0;
    margin: 0;
}
.node-button:hover{
    color: lime;
}
.node-transient{
    opacity: 0.7;
    color: #f8f8f2;
}
.node-persistent{
    color: #f8f8f2;
}
/* ... */

